--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,8 @@
     ],
     "require": {
         "php": "^8.1|^8.2",
+        "filament/filament": "^3.0.0",
+        "tomatophp/filament-developer-gate": "^1.0",
         "tomatophp/console-helpers": "^1.1"
     }
 }
