--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "tomatophp/filament-artisan",
     "type": "library",
-    "description": "Simple but yet powerful library for running some artisan commands. this packages is a fork of artisan-gui with some custom for filament UI",
+    "description": "Simple but yet powerful library for running some artisan commands for FilamentPHP",
     "keywords": [
         "php",
         "laravel",
@@ -37,6 +37,7 @@
     "require": {
         "php": "^8.1|^8.2",
         "filament/filament": "^3.0.0",
+        "calebporzio/sushi": "*",
         "tomatophp/filament-developer-gate": "^1.0",
         "tomatophp/console-helpers": "^1.1"
     }
